# lsd-slam-full

./: README.md
app-lsd-slam/: local.properties
app-lsd-slam/app/: build.gradle
app-lsd-slam/app/src/main/: AndroidManifest.xml
app-lsd-slam/app/src/main/java/com/example/native_activity/: NativeLoader.java  UseCamera2API.java  UseCameraAPI.java
app-lsd-slam/app/src/main/jni/: main.cpp
app-lsd-slam/app/src/main/res/layout/: native_loader.xml
app-lsd-slam/app/src/main/res/raw/: camcalib.cfg
app-lsd-slam/app/src/main/res/values/: strings.xml
lsd-slam-mobile/: .gitignore
lsd-slam-mobile/lsd_slam_core/: CMakeLists.txt
lsd-slam-mobile/lsd_slam_core/calib/: opencv_lgg3.cfg  opencv_nexus4.cfg  out_camera_data.xml
lsd-slam-mobile/lsd_slam_core/src/: LSDParamsConfig.h  LiveSLAMWrapper.cpp  LiveSLAMWrapper.h  SlamSystem.cpp  SlamSystem.h  main_live_odometry.cpp  main_on_images.cpp
lsd-slam-mobile/lsd_slam_core/src/DataStructures/: keyframeMsg.h
lsd-slam-mobile/lsd_slam_core/src/DepthEstimation/: DepthMap.cpp  DepthMap.h
lsd-slam-mobile/lsd_slam_core/src/GlobalMapping/: KeyFrameGraph.cpp
lsd-slam-mobile/lsd_slam_core/src/IOWrapper/: InputImageStream.h
lsd-slam-mobile/lsd_slam_core/src/IOWrapper/NetworkOutput/: NetworkOutput3DWrapper.h
lsd-slam-mobile/lsd_slam_core/src/IOWrapper/OpenCVIO/: OpenCVImageStreamThread.cpp  OpenCVImageStreamThread.h  OpenCVOutput3DWrapper.cpp  OpenCVOutput3DWrapper.h  opencvReconfigure.h
lsd-slam-mobile/lsd_slam_core/src/IOWrapper/OpenCVIO/Viewer/: KeyFrameDisplay.cpp  KeyFrameGraphDisplay.cpp
lsd-slam-mobile/lsd_slam_core/src/Tracking/: Relocalizer.cpp  SE3Tracker.cpp  Sim3Tracker.cpp
lsd-slam-mobile/lsd_slam_core/src/util/: Publisher.cpp  Publisher.h  Undistorter.cpp  Undistorter.h  globalFuncs.h  settings.cpp
lsd-slam-mobile/lsd_slam_viewer/: CMakeLists.txt
lsd-slam-mobile/lsd_slam_viewer/src/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  KeyFrameGraphDisplay.cpp  KeyFrameGraphDisplay.h  PointCloudViewer.cpp  PointCloudViewer.h  main_viewer.cpp
lsd-slam-noros/: .gitignore  README.md
lsd-slam-noros/lsd_slam_core/: CMakeLists.txt
lsd-slam-noros/lsd_slam_core/calib/: opencv_lgg3_640480.cfg  opencv_xyzdataset.cfg
lsd-slam-noros/lsd_slam_core/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
lsd-slam-noros/lsd_slam_core/src/: LSDParamsConfig.h  LiveSLAMWrapper.cpp  SlamSystem.cpp  SlamSystem.h  main_live_odometry.cpp
lsd-slam-noros/lsd_slam_core/src/DataStructures/: CommonStructures.h  keyframeGraphMsg.h
lsd-slam-noros/lsd_slam_core/src/GlobalMapping/: KeyFrameGraph.cpp
lsd-slam-noros/lsd_slam_core/src/IOWrapper/: InputImageStream.h
lsd-slam-noros/lsd_slam_core/src/IOWrapper/NetworkOutput/: NetworkOutput3DWrapper.cpp  NetworkOutput3DWrapper.h
lsd-slam-noros/lsd_slam_core/src/IOWrapper/OpenCVIO/: OpenCVImageStreamThread.cpp  OpenCVImageStreamThread.h
lsd-slam-noros/lsd_slam_core/src/IOWrapper/OpenCVIO/Viewer/: KeyFrameDisplay.cpp  KeyFrameGraphDisplay.h  PointCloudViewer.cpp
lsd-slam-noros/lsd_slam_core/src/Tracking/: SE3Tracker.cpp  Sim3Tracker.cpp
lsd-slam-noros/lsd_slam_core/src/util/: Publisher.cpp  Publisher.h  Undistorter.cpp
lsd-slam-noros/lsd_slam_viewer/: CMakeLists.txt
lsd-slam-noros/lsd_slam_viewer/src/: KeyFrameDisplay.cpp  main_viewer.cpp
